--- a/locales/pl/versions.json
+++ b/locales/pl/versions.json
@@ -5,8 +5,8 @@
       "1.1.3"
     ],
     [
-      "rzymek:moment",
-      "2.8.3_10"
+      "momentjs:moment",
+      "2.8.4"
     ],
     [
       "underscore",
